Fix try prevent content not fit browser wd

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,8 +9,6 @@ html, body {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   text-align: center;
   color: #2c3e50;
-  width:min-content;
-  margin: 0 2%;
 }
 
  a {
